fix cards alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -208,7 +208,6 @@ ul.search-results li a {
     background-color: transparent;
     width: 100%;
     max-height: 380px;
-    margin: auto;
 }
 
 .card iframe {
@@ -244,7 +243,6 @@ ul.search-results li a {
 .card a {
     color: var(--primary-text);
     display: grid;
-    grid-template-rows: 50% 50%;
     height: 100%;
     width: 100%;
 }
